external-crates/move/crates/move-cli/tests/sandbox_tests/clever_errors/args.exp
Command `test`:
INCLUDING DEPENDENCY MoveStdlib
BUILDING PackageBasics
Running Move unit tests
[ PASS    ] 0x1::AModule::double_four
[ PASS    ] 0x1::AModuleTests::double_four
[ PASS    ] 0x1::AModule::double_three
[ FAIL    ] 0x1::AModuleTests::double_four_invalid
[ PASS    ] 0x1::AModule::double_two
[ PASS    ] 0x1::AModuleTests::double_one_one
[ PASS    ] 0x1::AModuleTests::double_three
[ FAIL    ] 0x1::AModuleTests::double_three_const_based_different_module_fail
[ FAIL    ] 0x1::AModuleTests::double_three_location_based_invalid
[ PASS    ] 0x1::AModuleTests::double_three_location_based_valid
[ FAIL    ] 0x1::AModuleTests::double_three_should_fail
[ FAIL    ] 0x1::AModuleTests::double_three_should_fail_named_const
[ PASS    ] 0x1::AModuleTests::double_zero_zero

Test failures:

Failures in 0x1::AModuleTests:

┌── double_four_invalid ──────
│ error[E11001]: test failure
│    ┌─ ./sources/AModule.move:15:9
│    │
│ 14 │     public fun double_except_four(x: u64): u64 {
│    │                ------------------ In this function in 0x1::AModule
│ 15 │         assert!(x != 4);
│    │         ^^^^^^^^^^^^^^^ Test did not error as expected. Expected test to abort originating in the module 0x1::AModuleTests but instead it aborted originating in the module 0x1::AModule rooted here
│ 
│ 
└──────────────────


┌── double_three_const_based_different_module_fail ──────
│ error[E11001]: test failure
│    ┌─ ./sources/AModule.move:10:9
│    │
│  9 │     public fun double_except_three(x: u64): u64 {
│    │                ------------------- In this function in 0x1::AModule
│ 10 │         assert!(x != 3, EIsThree);
│    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Test did not error as expected. Expected test to abort with error constant 'EIsThree' originating in the module 0x1::BModule but instead it aborted with error constant 'EIsThree' originating in the module 0x1::AModule rooted here
│ 
│ 
└──────────────────


┌── double_three_location_based_invalid ──────
│ error[E11001]: test failure
│    ┌─ ./sources/AModule.move:10:9
│    │
│  9 │     public fun double_except_three(x: u64): u64 {
│    │                ------------------- In this function in 0x1::AModule
│ 10 │         assert!(x != 3, EIsThree);
│    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Test did not error as expected. Expected test to abort with error constant 'EIsThree' originating in the module 0x1::AModuleTests but instead it aborted with error constant 'EIsThree' originating in the module 0x1::AModule rooted here
│ 
│ 
└──────────────────


┌── double_three_should_fail ──────
│ error[E11001]: test failure
│    ┌─ ./sources/AModule.move:10:9
│    │
│  9 │     public fun double_except_three(x: u64): u64 {
│    │                ------------------- In this function in 0x1::AModule
│ 10 │         assert!(x != 3, EIsThree);
│    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Test did not abort with expected code. Expected test to abort with code 0, but instead it aborted with error constant 'EIsThree' originating in the module 0x1::AModule rooted here
│ 
│ 
└──────────────────


┌── double_three_should_fail_named_const ──────
│ error[E11001]: test failure
│    ┌─ ./sources/AModule.move:10:9
│    │
│  9 │     public fun double_except_three(x: u64): u64 {
│    │                ------------------- In this function in 0x1::AModule
│ 10 │         assert!(x != 3, EIsThree);
│    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Test did not error as expected. Expected test to abort with error constant 'ENotFound' originating in the module 0x1::AModule but instead it aborted with error constant 'EIsThree' originating in the module 0x1::AModule rooted here
│ 
│ 
└──────────────────

Test result: FAILED. Total tests: 13; passed: 8; failed: 5
warning[W10007]: issue with attribute value
   ┌─ tests/AModuleTests.move:17:24
   │
17 │     #[expected_failure(abort_code = 0)]
   │                        ^^^^^^^^^^   - Replace value with constant from expected module or add `location=...` attribute.
   │                        │             
   │                        WARNING: passes for an abort from any module.

